doc: add java docs.